# TiaGo_TourGuide

./: .gitignore  Dockerfile  README.md  circular_head_motion_publisher.py  cv_sub.py  launch_Tour.sh  map.pgm  move_amcl.py  move_base_amcl.py  note.txt  open_cv_trial.py  pal  pal.pub  prompts.txt  start.sh  stt.py  stt_ros.py  tempfile  test.py
Inside Tiago/: local_costmap_public_sim_omni.yaml
TiagoTeamCode/Maps/: map.pgm  map.yaml
TiagoTeamCode/src/TiagoTourGuide/: CMakeLists.txt
TiagoTeamCode/src/TiagoTourGuide/src/: AutoLocalization.py
TiagoTourGuide_ws/: start.bash
TiagoTourGuide_ws/.catkin_tools/profiles/default/: devel_collisions.txt
TiagoTourGuide_ws/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
TiagoTourGuide_ws/devel/.private/TiagoTourGuide/: .catkin  .rosinstall  local_setup.sh  setup.sh
TiagoTourGuide_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
TiagoTourGuide_ws/devel/.private/geometry2/: .catkin
TiagoTourGuide_ws/devel/.private/pal_behaviour_msgs/: .catkin  setup.sh
TiagoTourGuide_ws/devel/.private/pal_common_msgs/: .catkin  .rosinstall  local_setup.sh
TiagoTourGuide_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
TiagoTourGuide_ws/install/share/pal_simulation_msgs/: package.xml
TiagoTourGuide_ws/install/share/pal_simulation_msgs/cmake/: pal_simulation_msgs-msg-paths.cmake  pal_simulation_msgsConfig.cmake
TiagoTourGuide_ws/install/share/pal_simulation_msgs/msg/: ExternalWrench.msg
TiagoTourGuide_ws/logs/TiagoTourGuide/: build.cmake.002.log.stderr  build.symlink.003.log.stderr
TiagoTourGuide_ws/logs/pal_detection_msgs/: build.make.000.log.stderr
TiagoTourGuide_ws/logs/pal_interaction_msgs/: build.make.003.log.stderr  build.symlink.002.log.stderr
TiagoTourGuide_ws/logs/pal_simulation_msgs/: build.make.000.log.stderr
TiagoTourGuide_ws/logs/pal_walking_msgs/: build.cmake.000.log.stderr
TiagoTourGuide_ws/logs/par_a3/: build.symlink.002.log.stderr
TiagoTourGuide_ws/logs/stt/: build.cmake.000.log.stderr
TiagoTourGuide_ws/logs/tf2_msgs/: build.make.000.log.stderr
TiagoTourGuide_ws/shellcom/: README.md  rosie.sh  tiago.sh
TiagoTourGuide_ws/src/: README.md
TiagoTourGuide_ws/src/pal_detection_msgs/: CHANGELOG.rst  CMakeLists.txt
TiagoTourGuide_ws/src/pal_detection_msgs/msg/: FaceDetection.msg  FaceThermalDetections.msg  RecognizedObject.msg
TiagoTourGuide_ws/src/pal_detection_msgs/srv/: ChangeObjectRecognizerModel.srv
TiagoTourGuide_ws/src/pal_face_detector_opencv-hydro-devel/: CMakeLists.txt  README.md  package.xml
TiagoTourGuide_ws/src/pal_face_detector_opencv-hydro-devel/etc/: two_faces.bag
TiagoTourGuide_ws/src/pal_face_detector_opencv-hydro-devel/launch/: detector.launch
TiagoTourGuide_ws/src/pal_face_detector_opencv-hydro-devel/src/: face_detector.cpp
TiagoTourGuide_ws/src/pal_interaction_msgs/: CMakeLists.txt
TiagoTourGuide_ws/src/pal_navigation_cfg_tiago/: CMakeLists.txt  package.xml
TiagoTourGuide_ws/src/pal_navigation_cfg_tiago/cmake/: pal_navigation_cfg_tiagoConfig.cmake
TiagoTourGuide_ws/src/pal_navigation_cfg_tiago/config/base/common/: exploration_costmap.yaml  global_costmap.yaml  global_costmap_plugins.yaml  local_costmap.yaml  local_costmap_omni.yaml  local_costmap_plugins_omni.yaml  local_costmap_plugins_rgbd.yaml  move_base_fleet.yaml  recovery_behaviors.yaml  recovery_behaviors_rgbd.yaml
TiagoTourGuide_ws/src/pal_navigation_cfg_tiago/config/base/fleet_teb/: local_planner.yaml
TiagoTourGuide_ws/src/pal_navigation_cfg_tiago/config/base/global_planner/: global_planner_fleet.yaml
TiagoTourGuide_ws/src/pal_navigation_cfg_tiago/config/base/pal/: local_planner.yaml
TiagoTourGuide_ws/src/pal_navigation_cfg_tiago/config/localization/: amcl_robust_odometry.yaml
TiagoTourGuide_ws/src/pal_navigation_cfg_tiago/config/mapping/: karto_hokuyo.yaml  karto_sick-561.yaml  karto_sick-571.yaml
TiagoTourGuide_ws/src/pal_navigation_cfg_tiago/config/state_machine/: state_machine.yaml  state_machine_omni.yaml
TiagoTourGuide_ws/src/pal_navigation_cfg_tiago/launch/: localization_fake.launch  map_exploration.launch  move_base.launch  odometry.launch  state_machine.launch
TiagoTourGuide_ws/src/par_a3/: CMakeLists.txt  package.xml
TiagoTourGuide_ws/src/stt/: CMakeLists.txt
TiagoTourGuide_ws/src/tiago_common/: CMakeLists.txt
TiagoTour_Website/: app.py  app.wsgi  basic-flask-app.conf  index.html  index.php  test.php
TiagoTour_Website/flaskapp/: app.py  test.php
TiagoTour_Website/flaskapp/templates/: index.html  tiago.html
docker/: Dockerfile  Dockerfile.ubuntu  docker-compose.yml  stt.py
tiago_common/: README.md  setup.py
tiago_common/src/tiago_common/: open_ai_utils.py
(+4343 files in other folders)
